syntax = "proto3";
package setu;
option go_package = "github.com/0w0mewo/budong/server/grpcserver/setu";

service SetuService {
    rpc GetInventory (InventoryReq) returns (InventoryResp);
    rpc Fetch(FetchReq) returns (ErrResp); 
}

message FetchReq {
    uint64 amount = 1;
}

message InventoryReq {
    uint64 page = 1;
    uint64 pageLimit = 2; 
}

message ErrResp {
    string errMsg = 1;
}

message InventoryResp {
    ErrResp err = 1;
    message SetuInfo {
        int64 id = 1;
        string title = 2;
        int64 uid = 3;
        string url = 4;
        bool is_r18 = 5;
    }
    repeated SetuInfo info = 2;
}
